# timestone

./: DASHBOARD_FIXES_SUMMARY.md  FRONTEND_FIX_SUMMARY.md  README.md  Readme.md  h --force-with-lease origin Austin
Etherlink/: hardhat.config.ts  package-lock.json  package.json
Etherlink/contracts/: TimeOracleFileLocker.sol
Etherlink/ignition/deployments/chain-128123/: deployed_addresses.json  journal.jsonl
Etherlink/ignition/modules/: TimeOracle.ts
Time-oracle-rollup/: Cargo.toml  kernel.wasm
Time-oracle-rollup/src/: lib.rs
backend/: IMPLEMENTATION_SUMMARY.md  README.md  create-test-capsule.js  diagnose.js  frontend-test-capsule.json  package-lock.json  package.json  quick-test.js  test-capsule-data.json  test-private-keys.js  test.js
backend/src/: index.js
backend/src/middleware/: errorHandler.js
backend/src/routes/: capsule.js  debug.js  emergency.js  encryption.js  ipfs.js
backend/src/services/: kyberEncryption.js  pinataService.js  timeCapsuleService.js
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: WalletProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx  page_new.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/unlock/: page.tsx
frontend/src/components/: ContinuousHyperspeed.tsx  Hyperspeed.tsx  IsolatedTitleComponent.tsx  TimeOracleVerification.tsx
frontend/src/components/ui/: Hyperspeed.tsx  animated-beam.tsx  civic-wallet-button.tsx  (+12 more)
frontend/src/lib/: api.ts  chains.ts  contract.ts  tezos-rollup.ts
(+3 files in other folders)
