[package]
name = "time-oracle-rollup"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tezos-smart-rollup = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Remove chrono with default features to avoid std time dependencies
chrono = { version = "0.4", features = ["serde"], default-features = false }
sha2 = "0.10"
hex = "0.4"
# Remove reqwest and tokio - they don't work in WASM/rollup environment

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

# Ensure we're building for the correct target
[profile.dev]
panic = "abort"